--- a/draft/JsoupTest/nbproject/project.properties
+++ b/draft/JsoupTest/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JsoupTest
+application.vendor=Herfan Heryandi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,12 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JsoupTest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jsoup-1.8.2.jar=C:\\Users\\admin7\\Downloads\\jsoup-1.8.2.jar
 file.reference.jsoup-1.8.2.zip=jsoup-1.8.2.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jsoup-1.8.2.jar}:\
     ${file.reference.jsoup-1.8.2.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
