--- a/draft/JsoupTest/nbproject/private/private.properties
+++ b/draft/JsoupTest/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Herfan Heryandi\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\admin7\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
