--- a/draft/TryJsoup/nbproject/project.properties
+++ b/draft/TryJsoup/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TryJsoup
+application.vendor=ADMIN7
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TryJsoup.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jsoup-1.8.2.zip=H:\\Kuliah\\Skripsi\\github\\Skripsi\\app\\StudentPortal\\lib\\jsoup-1.8.2.zip
+file.reference.jsoup-1.8.2.zip-1=..\\..\\app\\StudentPortal\\lib\\jsoup-1.8.2.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jsoup-1.8.2.zip}
+    ${file.reference.jsoup-1.8.2.zip}:\
+    ${file.reference.jsoup-1.8.2.zip-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
