--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app/StudentPortal/SIAModels"]
-	path = app/StudentPortal/SIAModels
+[submodule "StudentPortal/SIAModels"]
+	path = StudentPortal/SIAModels
 	url = https://github.com/pascalalfadian/SIAModels
