Penambahan kelas untuk membaca .conf

--- a/StudentPortal/conf/functionaltest-template.conf
+++ b/StudentPortal/conf/functionaltest-template.conf
@@ -1,6 +1,8 @@
 email.invalid = test@gmail.com
 password.invalid = secret
 
+email.notStudentUnpar = 72990015@gmail.com
+
 email.wrongpassword = 7313015@student.unpar.ac.id
 password.wrongpassword = secret
 
