--- a/StudentPortal/conf/functionaltest.conf
+++ b/StudentPortal/conf/functionaltest.conf
@@ -6,7 +6,6 @@ email.notStudentUnpar = 72990015@gmail.com
 email.wrongpassword = 7313015@student.unpar.ac.id
 password.wrongpassword = secret
 
-email.valid = 7313006@student.unpar.ac.id
-password.valid = holyjustice
-
+email.valid = 7313013@student.unpar.ac.id
+password.valid = seoulsong13
 
