Michael mau push

--- a/StudentPortal/conf/functionaltest-template.conf
+++ b/StudentPortal/conf/functionaltest-template.conf
@@ -2,11 +2,17 @@ email.invalid = test@gmail.com
 password.invalid = secret
 
 email.notStudentUnpar = 72990015@gmail.com
+pass.notStudentUnpar = secret
 
 email.wrongpassword = 7313015@student.unpar.ac.id
 password.wrongpassword = secret
 
-email.valid = 7313013@student.unpar.ac.id
+email.smt1 = 7316015@student.unpar.ac.id
+passord.smt1 = secret
+
+email.valid = 7313015@student.unpar.ac.id
 password.valid = changeme
+
+
 
 
