--- a/StudentPortal/conf/functionaltest-template.conf
+++ b/StudentPortal/conf/functionaltest-template.conf
@@ -8,10 +8,10 @@ email.wrongpassword = 7313015@student.unpar.ac.id
 password.wrongpassword = secret
 
 email.smt1 = 7316015@student.unpar.ac.id
-passord.smt1 = secret
+password.smt1 = secret
 
 email.valid = 7313015@student.unpar.ac.id
-password.valid = changeme
+password.valid = secret
 
 
 
