TestDuaPengguna added. All testing have been tasted. Total 15 test, 3 failed (no email address for testing).

--- a/StudentPortal/conf/functionaltest-template.conf
+++ b/StudentPortal/conf/functionaltest-template.conf
@@ -1,7 +1,7 @@
 email.invalid = test@gmail.com
 password.invalid = secret
 
-email.notStudentUnpar = 7213015@gmail.com
+email.notStudentUnpar = 7213015@student.unpar.ac.id
 pass.notStudentUnpar = secret
 
 email.wrongpassword = 7313015@student.unpar.ac.id
