tidak menggunakan try catch di kelas FileConfReader tetapi throws

--- a/StudentPortal/conf/functionaltest-template.conf
+++ b/StudentPortal/conf/functionaltest-template.conf
@@ -1,19 +1,19 @@
-email.invalid = test@gmail.com
-password.invalid = secret
+email.invalid = masukkan-email-non-student-anda@domain.com
+password.invalid = masukkan-huruf-acak
 
-email.notStudentUnpar = 7213015@student.unpar.ac.id
-pass.notStudentUnpar = secret
+email.notStudentUnpar = email.notInformatikaStudent@student.unpar.ac.id
+pass.notStudentUnpar = password.notInformatikaStudent@student.unpar.ac.id
 
-email.wrongpassword = 7313015@student.unpar.ac.id
-password.wrongpassword = secret
+email.wrongpassword = masukkan-email-anda@student.unpar.ac.id
+password.wrongpassword = ganti-saya
 
-email.smt1 = 7316015@student.unpar.ac.id
-password.smt1 = secret
+email.semester1 = masukkan-email-mahasiswa-semester-1@student.unpar.ac.id
+password.smt1 = ganti-saya
 
-email.valid = 7313015@student.unpar.ac.id
-password.valid = secret
+email.valid = masukkan-email-student-anda@student.unpar.ac.id
+password.valid = ganti-saya
 
 email.notActive = 7313000@student.unpar.ac.id
-password.notActive = hehehe
+password.notActive = ganti-saya
 
 
