--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "StudentPortal/SIAModels"]
-	path = StudentPortal/SIAModels
+[submodule "SIAModels"]
+	path = SIAModels
 	url = https://github.com/pascalalfadian/SIAModels
